Fix bug 116562 "Flash movie is not loaded if disk cache is disabled".  Return error from SetCachePolicy() if storage is not currently enabled for policy.  r=gagan, sr=darin.